Fix nullref with non-existing Team; Fix missing l in Home/Index

--- a/PlanspielWeb/Views/Users/Details.cshtml
+++ b/PlanspielWeb/Views/Users/Details.cshtml
@@ -35,7 +35,7 @@
             @if (Model.TeamId == null) {
                 <span>None</span>
             } else {
-                <a href="/Teams/Details/@Model.TeamId">@Html.DisplayFor(model => model.Team.Name)</a>
+                <a href="/Teams/Details/@Model.TeamId">@(Model.Team?.Name ?? "N/A")</a>
             }
         </dd>
     </dl>
