--- a/PlanspielWeb/Views/Home/Index.cshtml
+++ b/PlanspielWeb/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Wilkommen</h1>
+    <h1 class="display-4">Willkommen</h1>
     <h3>Zum Planspiel mit Rise of Industry</h3>
     <br />
     @if (Context.Session.TryGet<DAL.Models.User>("user", out var user)) {
