Add delete link on team details for easier removal od teams save data

--- a/PlanspielWeb/Views/Teams/Details.cshtml
+++ b/PlanspielWeb/Views/Teams/Details.cshtml
@@ -65,6 +65,7 @@
 
                 @if (user != null && user.Admin) {
                     <th>Share Price</th>
+                    <th>Actions</th>
                 }
             </tr>
         </thead>
@@ -80,6 +81,10 @@
 
                     @if (user != null && user.Admin) {
                         <td>@data.ShareValue.ToString("C2", new System.Globalization.CultureInfo("US-us"))</td>
+                        <td>
+                            <a asp-controller="SaveDatas" asp-action="DeleteFromTeam"
+                               asp-route-id="@data.Id" asp-route-teamId="@Model.Id">Delete</a>
+                        </td>
                     }
                 </tr>
             }
