--- a/PlanspielWeb/Views/SaveDatas/Delete.cshtml
+++ b/PlanspielWeb/Views/SaveDatas/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.SteamID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeStamp)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TimeStamp)
+            @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Profit)
