--- a/PlanspielWeb/Views/SaveDatas/Index.cshtml
+++ b/PlanspielWeb/Views/SaveDatas/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.DisplayNameFor(model => model.SteamID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TimeStamp)
+                @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Profit)
@@ -37,6 +37,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.AveragePollution)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BuildingCount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UnlockedResearchCount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RegionCount)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.SteamID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TimeStamp)
+                @item.Date
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Profit)
@@ -66,6 +75,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AveragePollution)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BuildingCount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UnlockedResearchCount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RegionCount)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
