--- a/PlanspielWeb/Views/SaveDatas/Edit.cshtml
+++ b/PlanspielWeb/Views/SaveDatas/Edit.cshtml
@@ -75,6 +75,11 @@
         <span asp-validation-for="RegionCount" class="col-md-10 offset-md-2"></span>
     </div>
     <div class="form-group row">
+        <label asp-for="ShareValue" class="control-label col-md-2"></label>
+        <input asp-for="ShareValue" class="form-control col-md-6" />
+        <span asp-validation-for="ShareValue" class="col-md-10 offset-md-2"></span>
+    </div>
+    <div class="form-group row">
         <input type="submit" value="Save" class="btn btn-primary col-md-2 offset-md-2" />
     </div>
 </form>
