--- a/PlanspielWeb/Views/SaveDatas/Index.cshtml
+++ b/PlanspielWeb/Views/SaveDatas/Index.cshtml
@@ -46,6 +46,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.RegionCount)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ShareValue)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -84,6 +87,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RegionCount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ShareValue)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
