Add system to show news to players

--- a/PlanspielWeb/Views/Login/Index.cshtml
+++ b/PlanspielWeb/Views/Login/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Login";
     ViewData["current"] = "login";
+    ViewData["Container"] = "container";
 }
 
 <h4>Login</h4>
