--- a/PlanspielWeb/Views/News/Create.cshtml
+++ b/PlanspielWeb/Views/News/Create.cshtml
@@ -37,6 +37,11 @@
                 <input asp-for="PageID" class="form-control" />
                 <span asp-validation-for="PageID" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Visible" class="control-label"></label>
+                <input asp-for="Visible" class="form-control" />
+                <span asp-validation-for="Visible" class="text-danger"></span>
+            </div>
 
             <label class="control-label">Position</label>
             <div class="row form-inline">
