Added Task System

--- a/PlanspielWeb/Views/News/Index.cshtml
+++ b/PlanspielWeb/Views/News/Index.cshtml
@@ -69,7 +69,7 @@
                     @kvp.Value.Title
                 </h3>
                 <p class="card-text">
-                    @kvp.Value.Content
+                    @Html.Raw(kvp.Value.Content)
                 </p>
             </div>
         </div>
