--- a/PlanspielWeb/Views/Tasks/DeleteTask.cshtml
+++ b/PlanspielWeb/Views/Tasks/DeleteTask.cshtml
@@ -29,6 +29,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UTCStart)
         </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Enabled)
+        </dd>
     </dl>
 
     <form asp-action="DeleteTaskConfirmed">
