--- a/PlanspielWeb/Views/Tasks/Details.cshtml
+++ b/PlanspielWeb/Views/Tasks/Details.cshtml
@@ -21,6 +21,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UTCStart)
         </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Enabled)
+        </dd>
     </dl>
 </div>
 
@@ -56,7 +59,8 @@
                         @Html.DisplayFor(modelItem => item.GroupSteamID)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.SecondsFromStart) | @(item.SecondsFromStart / 60d) 
+                        @Html.DisplayFor(modelItem => item.SecondsFromStart) |
+                        @(Math.Round(item.SecondsFromStart / 60d, 2)) 
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Type)
